--- a/project/package.json
+++ b/project/package.json
@@ -23,10 +23,14 @@
     "@fastify/static": "^8.1.0",
     "@fastify/view": "^10.0.2",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-fastify": "^11.0.9",
+    "@nestjs/typeorm": "^11.0.0",
+    "class-validator": "^0.14.1",
     "handlebars": "^4.7.8",
+    "pg": "^8.13.3",
     "project": "file:",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
