--- a/project/package.json
+++ b/project/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@nestjs/cli": "^11.0.5",
     "@nestjs/config": "^4.0.0",
+    "@nestjs/core": "^11.0.11",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/testing": "^11.0.10",
