--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cpf-cnpj-validator": "^1.0.3",
     "frontend": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
