--- a/project/backend/package.json
+++ b/project/backend/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@fastify/static": "^8.1.1",
     "@fastify/view": "^10.0.2",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
